<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_shoe"
        android:layout_width="@dimen/_135sdp"
        android:layout_height="@dimen/_170sdp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="@dimen/_6sdp"
        android:background="@color/white"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:cardCornerRadius="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/dark_gray"
        app:strokeWidth="@dimen/_1sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/shoe_size"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintEnd_toEndOf="@+id/tv_company"
                app:layout_constraintStart_toStartOf="@+id/tv_company"
                app:layout_constraintTop_toBottomOf="@+id/tv_shoe_name" />

            <ImageView
                android:id="@+id/iv_shoe"
                android:layout_width="0dp"
                android:layout_height="@dimen/_110sdp"
                android:contentDescription="@string/shoe_image_description"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tv_shoe_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="@dimen/_8sdp"
                android:ellipsize="end"
                android:maxWidth="@dimen/_90sdp"
                android:maxLines="1"
                android:text="@string/shoe_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_shoe" />

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/shoe_price"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintStart_toStartOf="@+id/tv_shoe_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_shoe_name" />

            <TextView
                android:id="@+id/tv_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/company_name"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/tv_shoe_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_shoe_name" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>