<?xml version="1.0" encoding="utf-8"?>
<!-- constraint layout to give more flexibility -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/blue">

  <com.google.android.material.card.MaterialCardView
      android:id="@+id/cardView"
      android:layout_width="match_parent"
      android:layout_height="@dimen/_400sdp"
      android:layout_marginStart="@dimen/_16sdp"
      android:layout_marginEnd="@dimen/_20sdp"
      app:cardCornerRadius="@dimen/_14sdp"
      android:layout_marginTop="@dimen/_40sdp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tv_login">

      <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent">

          <com.google.android.material.button.MaterialButton
              android:id="@+id/btn_register"
              android:layout_width="@dimen/_200sdp"
              android:layout_height="@dimen/_50sdp"
              android:layout_marginStart="@dimen/_14sdp"
              android:layout_marginTop="@dimen/_10sdp"
              android:layout_marginEnd="@dimen/_14sdp"
              android:text="@string/register"
              android:textAllCaps="false"
              android:textSize="@dimen/_16ssp"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/btn_login"
              tools:ignore="DuplicateSpeakableTextCheck" />

          <com.google.android.material.button.MaterialButton
              android:id="@+id/btn_login"
              android:layout_width="@dimen/_200sdp"
              android:layout_height="@dimen/_50sdp"
              android:layout_marginStart="@dimen/_14sdp"
              android:layout_marginTop="@dimen/_80sdp"
              android:layout_marginEnd="@dimen/_14sdp"
              android:text="@string/login"
              android:textAllCaps="false"
              android:textSize="@dimen/_16ssp"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
              tools:ignore="DuplicateSpeakableTextCheck" />

          <com.google.android.material.textfield.TextInputLayout
              android:id="@+id/textInputLayout4"
              style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginStart="@dimen/_20sdp"
              android:layout_marginTop="@dimen/_11sdp"
              android:layout_marginEnd="@dimen/_20sdp"
              android:hint="@string/password"
              app:endIconMode="password_toggle"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

              <com.google.android.material.textfield.TextInputEditText
                  android:id="@+id/et_password"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="textPassword"
                  tools:ignore="TextContrastCheck">

              </com.google.android.material.textfield.TextInputEditText>

          </com.google.android.material.textfield.TextInputLayout>


          <com.google.android.material.textfield.TextInputLayout
              android:id="@+id/textInputLayout3"
              style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginStart="@dimen/_20sdp"
              android:layout_marginTop="@dimen/_70sdp"
              android:layout_marginEnd="@dimen/_20sdp"
              android:hint="@string/email"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent">

              <com.google.android.material.textfield.TextInputEditText
                  android:id="@+id/et_email"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:drawableEnd="@drawable/ic_email"
                  android:inputType="textEmailAddress"
                  tools:ignore="TextContrastCheck">

              </com.google.android.material.textfield.TextInputEditText>

          </com.google.android.material.textfield.TextInputLayout>


      </androidx.constraintlayout.widget.ConstraintLayout>
  </com.google.android.material.card.MaterialCardView>

  <com.google.android.material.textview.MaterialTextView
      android:id="@+id/tv_login"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:text="@string/login"
      android:textColor="@color/white"
      android:textSize="@dimen/_28ssp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>